--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ flask = "^3.0.3"
 transformers = "^4.45.1"
 torch = "^2.4.1"
 nltk = "^3.9.1"
+pandas = "^2.2.3"
+instructor = "^1.5.1"
 
 
 [build-system]
